swi-prolog (5.6.58-1) unstable; urgency=low

  * New upstream release.
  * Fix GCC flag handling as SWI-Prolog prefers COFLAGS over CFLAGS:
    - Unset CFLAGS to allow upstream build system to select optimisations.
    - Should fix FTBFS on arm as -O0 is passed properly (introduced in
      5.6.49-1).
  * Fix typo ("polution" -> "pollution") in README.Debian.

 -- Chris Lamb <chris@chris-lamb.co.uk>  Tue, 22 Jul 2008 21:34:25 +0100

swi-prolog (5.6.57-1) unstable; urgency=low

  * New upstream release.
    - Remove HPPA shared object file extension patch as it has been merged
      upstream.
  * Bump Standards-Version to 3.8.0.
  * Depend on x11proto-core-dev instead of x-dev.

 -- Chris Lamb <chris@chris-lamb.co.uk>  Thu, 03 Jul 2008 14:35:47 +0100

swi-prolog (5.6.55-1) unstable; urgency=low

  * New upstream release.
  * Use correct shared object file extension on HPPA to fix FTBFS on this
    architecture since 5.6.53-2. Patch backported from upstream repository.

 -- Chris Lamb <chris@chris-lamb.co.uk>  Wed, 14 May 2008 02:47:49 +0100

swi-prolog (5.6.54-1) unstable; urgency=low

  * New upstream release.
    - Fixes portability in big-endian machines (Closes: #476701)

 -- Chris Lamb <chris@chris-lamb.co.uk>  Fri, 18 Apr 2008 16:05:56 +0100

swi-prolog (5.6.53-2) unstable; urgency=low

  * Fix spelling typo in swi-prolog-clib package description.
  * Build standalone shared library for use in foreign function interfaces
    such as SWIG. (Closes: #152811)

 -- Chris Lamb <chris@chris-lamb.co.uk>  Thu, 17 Apr 2008 00:01:08 +0100

swi-prolog (5.6.53-1) unstable; urgency=low

  * New upstream release.

 -- Chris Lamb <chris@chris-lamb.co.uk>  Tue, 15 Apr 2008 16:22:08 +0100

swi-prolog (5.6.52-2) unstable; urgency=low

  * Build and install the ODBC database extension. This adds a new binary
    package 'swi-prolog-odbc' (Closes: #380355).

 -- Chris Lamb <chris@chris-lamb.co.uk>  Fri, 04 Apr 2008 00:42:51 +0100

swi-prolog (5.6.52-1) unstable; urgency=low
